Working records, GUI, buttons